<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">Smart Pantry Manager</string><string name="pantry_title">Your Pantry</string><string name="add_ingredient_button">+ Add Ingredient</string><string name="empty_pantry_message">Your pantry is empty.\nAdd ingredients to get started!</string><string name="tab_pantry">Pantry</string><string name="tab_recipes">Recipes</string><string name="tab_settings">Settings</string>
<string name="quantity_format">%s %s</string><string name="expires_soon">Expires in %d days</string><string name="expires_today">Expires today</string><string name="expired">Expired</string><string name="no_expiry">No expiry date</string><string name="edit_button">Edit</string><string name="delete_button">Delete</string>
<string name="add_ingredient_title">Add Ingredient</string><string name="edit_ingredient_title">Edit Ingredient</string><string name="ingredient_name_label">Ingredient Name</string><string name="quantity_label">Quantity</string><string name="unit_label">Unit</string><string name="expiry_date_label">Expiry Date (Optional)</string><string name="save_button">Save</string><string name="cancel_button">Cancel</string>
<string name="unit_g">g</string><string name="unit_kg">kg</string><string name="unit_ml">ml</string><string name="unit_l">L</string><string name="unit_piece">piece</string><string name="unit_pieces">pieces</string><string name="unit_packet">packet</string><string name="unit_bottle">bottle</string><string name="unit_can">can</string><string name="unit_cup">cup</string><string name="unit_tablespoon">tablespoon</string><string name="unit_teaspoon">teaspoon</string>
<string name="error_empty_name">Please enter an ingredient name</string><string name="error_invalid_quantity">Quantity must be greater than 0</string><string name="error_empty_unit">Please select a unit</string><string name="error_invalid_date">Please enter a valid date</string><string name="error_duplicate_ingredient">This ingredient already exists in your pantry</string>
<string name="delete_ingredient_title">Delete Ingredient?</string><string name="delete_ingredient_message">Are you sure you want to delete %s?</string><string name="delete_button_confirm">Delete</string>
<string name="recipes_title">Suggested Recipes</string><string name="no_recipes_message">No recipes match your pantry yet.\nAdd more ingredients to discover recipes you can make.</string><string name="manage_pantry_button">Manage Pantry</string><string name="view_recipe_button">View Recipe</string><string name="you_can_make">You can make these recipes now:</string>
<string name="description_label">Description</string><string name="required_ingredients_label">Required Ingredients</string><string name="preparation_label">Preparation</string><string name="back_button">Back</string>
<string name="settings_title">Settings</string><string name="expiry_alerts_label">Expiry Alerts</string><string name="about_label">About</string><string name="about_content">Smart Pantry Manager\n\nVersion 1.0\n\nDeveloped for Mobile App Development 700</string>
<string name="ingredient_added_success">Ingredient added successfully</string><string name="ingredient_updated_success">Ingredient updated successfully</string><string name="ingredient_deleted_success">Ingredient deleted</string><string name="error_save_ingredient">Error saving ingredient. Please try again.</string><string name="error_delete_ingredient">Error deleting ingredient. Please try again.</string>
</resources>
